# RPG_Client

./: .com-unity-codely.json  .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  UpgradeLog.htm  _sizeof_test.cpp  build_client.ps1  commit_push_all.bat  main.cpp  skills-lock.json  sync_all.bat
.cursor/plans/: 3d地图双端拉取_a9e2c73c.plan.md  boot场景与loginserver_33a00c47.plan.md  chinese-log-standardization_9a17374d.plan.md  client_zone_list_status_41f82611.plan.md  fix_cursor_f5_debug_e24deccc.plan.md  fix_login_bg_flicker_e31ee948.plan.md  fix_utf-8_sfml_text_f110d28a.plan.md  fix_vs_debug_bad_alloc_c6750088.plan.md  flatten_client_directory_11049a78.plan.md  flatten_client_src_1e865b17.plan.md  gateway票据过期诊断_55fb3cae.plan.md  gateway鉴权与列表超时_bbf66daa.plan.md  glass_panel_fusion_e9bab917.plan.md  hide_console_fix_chinese_ui_ab40f7cb.plan.md  integrated_animated_login_bg_eb1363c2.plan.md  login_background_image_ca39d816.plan.md  login_ui_cursor_dropdown_e282947c.plan.md  login_ui_polish_d858ba2d.plan.md  mmorpg_sfml_client_d1c81fb3.plan.md  move_3party_and_common_be102864.plan.md  register-flow-client_305222d7.plan.md  rpg_common_submodule_9eecb26a.plan.md  rpg客户端3d迁移_fa1e8445.plan.md  tuanjie_1.6.11_重构_a4559495.plan.md  tuanjie_1.6.11_重构_f1144093.plan.md  xml_配置迁移_d8f95fb5.plan.md  修复_unity_编译_612d058d.plan.md  修复登录卡住_be76773a.plan.md  修复登录背景显示_1fb9d72b.plan.md  修复角色列表等待_a2eece80.plan.md  创角与主城视觉_9a45408d.plan.md  区列表格式错误诊断_6b003851.plan.md  区列表维护中诊断_8842d3b3.plan.md  协议_wire_v2_对齐_048e6b13.plan.md  客户端_tls_加密_3635790a.plan.md  客户端代码审查_dae54f5d.plan.md  客户端六项优化_889e85e4.plan.md  客户端冗余清理_b4cae03d.plan.md  客户端协议_protobuf_统一_8b92b400.plan.md  客户端质量修复_32115aef.plan.md  (+14 more)
.cursor/rules/: code-comments.mdc  log-language.mdc  protocol-protobuf.mdc
3Party/: README.md  download_and_build.ps1  fetch_3party.ps1
Client/: CMakeLists.txt  README.md  build_client.ps1  main.cpp
Client/3Party/: README.md  download_and_build.ps1
Client/Common/: ClientMsg.h  MsgId.h  NetDefine.h
Client/app/: AppState.h  GameApp.cpp  GameApp.h
Client/basefile/: gen_data.ps1  init.lua
Client/config/: client_config.json  serverlist.xml
Client/database/: building_config.lua
Client/game/: AmbientSystem.cpp  BuildingManager.cpp  EntityManager.cpp  EntityManager.h  GameScene.cpp  ItemBagModel.cpp  MapRenderer.cpp  MapRenderer.h  QuestModel.h
Client/lua/: ClientScriptHost.h  LuaManager.cpp  LuaManager.h
Client/map/1002/: buildings.json  collision.json
Client/net/: GameSession.cpp  GameSession.h  LoginSession.cpp  LoginSession.h  ZoneListSession.cpp  ZoneTypes.h
Client/script/client/: map_ambient.lua
Client/scripts/: init_common.ps1  sync_common.ps1
Client/sdk/log/: ClientLogger.cpp  ClientLogger.h
Client/sdk/math/: Random.cpp
Client/sdk/net/: ClientMsgHandler.cpp  ClientMsgHandler.h
Client/sdk/time/: TimeUtil.cpp
Client/sdk/util/: PathUtil.cpp  ServerListLoader.cpp  ServerListLoader.h  TextUtil.h
Client/ui/: LoginPanel.cpp  LoginPanel.h  RegisterPanel.cpp  RegisterPanel.h  ServerListPanel.cpp  UiTheme.cpp  UiTheme.h  ZoneHomePanel.h  ZoneSelectPanel.cpp  ZoneSelectPanel.h
Client/ui/widgets/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  TextInput.cpp  TextInput.h
Client/util/: ConfigLoader.cpp  ConfigLoader.h  LocalSettings.cpp  LocalSettings.h
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt
Protobuf/: BagCommon.cs  ChatCommon.cs  ChatMsg.cs  ClientCommon.cs  LoginMsg.cs  MapDataMsg.cs  NpcCommon.cs  NpcMsg.cs  QuestCommon.cs  README.md  RpgProto.asmdef  SystemCommon.cs  WireCommon.cs  ZoneCommon.cs
app/: AppState.h  GameApp.cpp  GameApp.h
assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
assets/StreamingAssets/: README.md
assets/characters/: README.md
assets/fonts/: README.md  fetch_font.ps1
assets/ui/: README.md  login_bg_anim.json
basefile/: data_table.lua
config/: client_config.json  client_config.xml.example
database/: quest_config.lua
datadosc/: README.md
docs/: COMMON.md  CONFIG.md  LUA_BRIDGE.md  MAP_SERVER_FETCH.md  Product-Spec.md  RPG_WorldData.md  SCOPE.md  SECURITY.md  UI_PROMPT_WORKFLOW.md  manifest_v1.example.json  map_cdn_index.example.json
docs/ui-prompts/: README.md  UI-Prompts.md
game/: AmbientSystem.cpp  AmbientSystem.h  BuildingManager.cpp  BuildingManager.h  CharacterSprite.cpp  CharacterSprite.h  EntityManager.cpp  EntityManager.h  GameScene.cpp  GameScene.h  ItemBagModel.h  MapRenderer.cpp  MapRenderer.h  QuestModel.cpp  WaterSystem.cpp  WaterSystem.h
lua/: ClientScriptHost.cpp  ClientScriptHost.h  LuaManager.cpp  ScriptBindings.cpp  ScriptBindings.h
map/: README.md
map/1002/: ambient.json  ground.json  river.json  river_fauna.json  water.json
net/: CharacterTypes.h  GameSession.cpp  GameSession.h  LoginSession.cpp  LoginSession.h  ZoneListSession.cpp  ZoneListSession.h  ZoneTypes.h
script/client/: event_bus.lua  init.lua  item_client.lua
scripts/: _common_guard.ps1  _tuanjie_common.ps1  align_tuanjie_editor.ps1  build_debug.ps1  build_map_packages.ps1  build_unity_client.ps1  clean_unity_library.ps1  commit_push_all.ps1  fetch_google_protobuf.ps1  fetch_map_package.ps1  gen_char_sprites.ps1  gen_map_assets.ps1  generate_login_backdrop_placeholders.py  gitignore.project.fragment  init_common.ps1  install_gitignore_unity.ps1  serve_map_cdn.ps1  setup_boot_scene.ps1  setup_config.ps1  setup_world_scene.ps1  smoke_login_server.ps1  sync_all.ps1  sync_common.ps1  sync_protobuf.ps1  sync_streaming_assets.ps1
sdk/log/: ClientLogger.cpp  ClientLogger.h
ui/: AuthLoginPanel.cpp  AuthLoginPanel.h  CharacterSelectPanel.cpp  CharacterSelectPanel.h  GameExitDialog.cpp  GameExitDialog.h  LoginBackgroundAnim.cpp  LoginBackgroundAnim.h  LoginChrome.cpp  LoginChrome.h  RegisterPanel.cpp  RegisterPanel.h  ServerListPanel.cpp  ServerListPanel.h  UiTheme.cpp  UiTheme.h  ZoneHomePanel.cpp  ZoneHomePanel.h
util/: ConfigLoader.cpp  ConfigLoader.h
(+123 files in other folders)
